--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   python:
     container_name: python
-    image: riuzzo01/multi-stage-app.py
+    image: riuzzo01/multi-stage-app.py:0.2
     ports: 
      - "5000:5000"
     volumes:
